--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,59 +1,61 @@
 /* app.component.css */
 
+/* Navbar */
 .navbar {
     background-color: #333;
     color: #fff;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1.5vmax 3vmax;
+    padding: 1rem 2rem;
+    flex-wrap: wrap;
 }
 
 .navbar-title {
-    font-size: 1.7rem;
+    font-size: 1.5rem;
 }
 
 .navbar-menu {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+    list-style: none;
+    display: flex;
+    gap: 1rem;
 }
 
 .navbar-menu li {
     display: inline;
-    margin-right: 2vmax;
-    font-size: 1.3rem;
 }
 
-.navbar-menu li:last-child {
-    margin-right: 0;
-}
-
-.navbar-menu li a {
-    color: #fff;
+.navbar-menu a {
+    color: white;
     text-decoration: none;
+    padding: 0.5rem 1rem;
 }
 
-.navbar-menu li a:hover {
+.navbar-menu a:hover {
     text-decoration: underline;
 }
 
+/* Container Layout */
 .container {
     display: flex;
-    height: 100%;
-    min-height: 87vh;
-    margin-top: 0.4vmax;
+    flex-direction: row;
+    gap: 1rem;
+    padding: 1rem;
 }
 
+/* Posts Section */
 .content {
     flex: 1;
-    padding: 20px;
+    padding: 1rem;
 }
 
+
+/* Sidebar */
 app-sidebar {
-    width: 20%;
+    width: 25%;
     background-color: #333;
-    padding: 20px;
+    padding: 1rem;
     color: white;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
+    transition: all 0.3s ease-in-out;
 }
