--- a/src/app/post/post/post.component.html
+++ b/src/app/post/post/post.component.html
@@ -1,132 +1,139 @@
 <!-- post.component.html -->
 
 <div *ngIf="displayedPostList && displayedPostList.length > 0; else noPosts">
-    <div class="post" *ngFor="let post of displayedPostList; let i = index">
-      <div class="post-header">
-        <div class="post-title">{{post.title}}</div>
-      </div>
-      <!-- Display Attachments -->
-    <div *ngIf="post.attachment">
-      <p><strong>Attachment:</strong></p>
-      <div *ngIf="isImage(post.attachment)">
-        <img [src]="post.attachment" alt="Attachment" width="200" />
-      </div>
-      <div *ngIf="!isImage(post.attachment)">
-        <a [href]="post.attachment" target="_blank">View Attachment</a>
-      </div>
+  <div class="post" *ngFor="let post of displayedPostList; let i = index">
+    <div class="post-header">
+      <div class="post-title">{{post.title}}</div>
     </div>
-      <div class="post-content">{{post.content}}</div>
-      <div class="post-actions">
-        <button class="action-button" (click)="toggleLike(post._id)">
-          <span *ngIf="post.isLiked">Unlike</span>
-          <span *ngIf="!post.isLiked">Like</span>
-        </button>
-        <span>{{ post.likes && post.likes.length }} likes</span>
+    <div class="post-content">{{post.content}}</div>
+    <div *ngIf="post.attachmentUrl">
+      <!--<p><strong>Attachment:</strong></p>-->
+    
+      <!-- If it's an image, display it -->
+      <div *ngIf="isImage(post.attachmentUrl); else fileLink">
+        <img [src]="post.attachmentUrl" alt="Attachment" width="200" />
       </div>
-      <div class="post-actions" *ngIf="getUserId() === post.author">
-        <hr />
-        <button
-          class="action-button-header"
-          style="background-color: green"
-          (click)="populateUpdateForm(post)"
-        >
-          Update
-        </button>
-        <button
-          class="action-button-header"
-          style="background-color: crimson"
-          (click)="confirmDelete(post)"
-        >
-          Delete
-        </button>
-      </div>
-    </div>
-  </div>
-  <ng-template #noPosts>
-    <div class="no-posts-container">
-      <p>No Posts available</p>
-    </div>
+      <!-- Attempt to render all attachments as images--> 
+  <ng-template #fileLink>
+    <img [src]="getFullAttachmentUrl(post.attachment)" alt="Attachment" width="500" onerror="this.onerror=null; this.src='assets/file-icon.png';" />
   </ng-template>
-  
-  <div *ngIf="showUpdateForm" class="update-form-container">
-    <button class="close-button" (click)="cancelUpdate()">X</button>
-    <h2>Update Post</h2>
-    <form class="update-form" (ngSubmit)="updatePost(postUpdated._id)">
-      <div>
-        <label for="author">Post Author:</label>
-        <input
-          type="text"
-          id="author"
-          name="author"
-          [(ngModel)]="userDetails.username"
-          readonly
-        />
-      </div>
-      <div>
-        <label for="updatePostTitle">Post Title:</label>
-        <input
-          type="text"
-          id="updatePostTitle"
-          name="updatePostTitle"
-          [(ngModel)]="postUpdated.title"
-          required
-        />
-      </div>
-      <div>
-        <label for="updatePostContent">Post Content:</label>
-        <input
-          type="text"
-          id="updatePostContent"
-          name="updatePostContent"
-          [(ngModel)]="postUpdated.content"
-          required
-        />
-      </div>
-      <div>
-        <label for="updatePostCategory">Post Category:</label>
-        <input
-          type="text"
-          id="updatePostCategory"
-          name="updatePostCategory"
-          [(ngModel)]="postUpdated.category"
-          required
-        />
-      </div>
-      <div>
-        <label for="createdAt">Created At:</label>
-        <input
-          type="text"
-          id="createdAt"
-          name="createdAt"
-          [(ngModel)]="postUpdated.createdAt"
-          readonly
-        />
-      </div>
-      <div>
-        <label for="updatedAt">Updated At:</label>
-        <input
-          type="text"
-          id="updatedAt"
-          name="updatedAt"
-          [(ngModel)]="postUpdated.updatedAt"
-          readonly
-        />
-      </div>
-      <div>
-        <label for="updatePostAttachment">Attachment:</label>
-        <input
-          type="text"
-          id="updatePostAttachment"
-          name="updatePostAttachment"
-          [(ngModel)]="postUpdated.attachment"
-          required
-        />
-        <img src="{{postUpdated.attachment}}" />
-      </div>
-      <div>
-        <button type="submit">Update Post</button>
-        <button type="button" (click)="cancelUpdate()">Cancel</button>
-      </div>
-    </form>
+    
+      <!-- If it's not an image, display it as a link  
+      <ng-template #fileLink>
+        <a [href]="post.attachmentUrl" target="_blank">View Attachment</a>
+      </ng-template>
+    </div>-->
+    
+    <div class="post-actions">
+      <button class="action-button" (click)="toggleLike(post._id)">
+        <span *ngIf="post.isLiked">Unlike</span>
+        <span *ngIf="!post.isLiked">Like</span>
+      </button>
+      <span>{{ post.likes && post.likes.length }} likes</span>
+    </div>
+    <div class="post-actions" *ngIf="getUserId() === post.author">
+      <hr />
+      <button
+        class="action-button-header"
+        style="background-color: green"
+        (click)="populateUpdateForm(post)"
+      >
+        Update
+      </button>
+      <button
+        class="action-button-header"
+        style="background-color: crimson"
+        (click)="confirmDelete(post)"
+      >
+        Delete
+      </button>
+    </div>
   </div>
-  
+</div>
+<ng-template #noPosts>
+  <div class="no-posts-container">
+    <p>No Posts available</p>
+  </div>
+</ng-template>
+
+<div *ngIf="showUpdateForm" class="update-form-container">
+  <button class="close-button" (click)="cancelUpdate()">X</button>
+  <h2>Update Post</h2>
+  <form class="update-form" (ngSubmit)="updatePost(postUpdated._id)">
+    <div>
+      <label for="author">Post Author:</label>
+      <input
+        type="text"
+        id="author"
+        name="author"
+        [(ngModel)]="userDetails.username"
+        readonly
+      />
+    </div>
+    <div>
+      <label for="updatePostTitle">Post Title:</label>
+      <input
+        type="text"
+        id="updatePostTitle"
+        name="updatePostTitle"
+        [(ngModel)]="postUpdated.title"
+        required
+      />
+    </div>
+    <div>
+      <label for="updatePostContent">Post Content:</label>
+      <input
+        type="text"
+        id="updatePostContent"
+        name="updatePostContent"
+        [(ngModel)]="postUpdated.content"
+        required
+      />
+    </div>
+    <div>
+      <label for="updatePostCategory">Post Category:</label>
+      <input
+        type="text"
+        id="updatePostCategory"
+        name="updatePostCategory"
+        [(ngModel)]="postUpdated.category"
+        required
+      />
+    </div>
+    <div>
+      <label for="createdAt">Created At:</label>
+      <input
+        type="text"
+        id="createdAt"
+        name="createdAt"
+        [(ngModel)]="postUpdated.createdAt"
+        readonly
+      />
+    </div>
+    <div>
+      <label for="updatedAt">Updated At:</label>
+      <input
+        type="text"
+        id="updatedAt"
+        name="updatedAt"
+        [(ngModel)]="postUpdated.updatedAt"
+        readonly
+      />
+    </div>
+    <div>
+      <label for="updatePostAttachment">Attachment:</label>
+      <input
+        type="text"
+        id="updatePostAttachment"
+        name="updatePostAttachment"
+        [(ngModel)]="postUpdated.attachment"
+        required
+      />
+      <img src="{{postUpdated.attachment}}" />
+    </div>
+    <div>
+      <button type="submit">Update Post</button>
+      <button type="button" (click)="cancelUpdate()">Cancel</button>
+    </div>
+  </form>
+</div>
